# IP-Shlink-MCPServer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.coolify.yml  docker-compose.development.yml  docker-compose.traefik.yml
.github/: dependabot.yml
.github/config/docker-base-image-monitor/: base-images.json
.github/config/release/: semantic-release.json
.github/workflows/: docker-maintenance.yml  docker-release.yml
app/bg-shlink-mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
app/bg-shlink-mcp/extensions/: extensions.json
app/bg-shlink-mcp/scripts/: bundle-openapi.py
app/bg-shlink-mcp/src/: __init__.py  config.py  logging_setup.py  main.py  rate_limit.py  server.py
app/bg-shlink-mcp/src/auth/: __init__.py  client_storage.py  entra.py  generic_oidc.py  google.py  middleware.py  provider_factory.py
app/bg-shlink-mcp/src/extensions/: __init__.py  config.py  loader.py  prompts.py  resources.py  tasks.py
app/bg-shlink-mcp/src/profiles/: shlink.json
app/bg-shlink-mcp/src/shlink/: __init__.py  client.py  errors.py  openapi_loader.py  tool_mapper.py
app/bg-shlink-mcp/src/static/: index.html
app/bg-shlink-mcp/tests/: conftest.py  test_auth_builders.py  test_client_storage.py  test_config.py  test_export_task.py  test_extensions.py  test_openapi_loader.py  test_provider_factory.py  test_rate_limit.py  test_shlink_client.py  test_tenant_middleware.py  test_tool_mapper.py
docs/: SHLINK-MCP-SPEC.md  authentication.md  client-setup.md  installation.md  mcp-primitives.md  testing.md  troubleshooting.md  vision-generic-mcp-bridge.md
scripts/: dev-inspector.py  generate-env.py  generate-shlink-key.py  setup-azure-app.ps1  setup-azure-app.sh
