[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bg-shlink-mcp"
version = "0.12.6"
description = "BAUER GROUP Shlink MCP Server — OIDC-gated remote MCP bridge for self-hosted Shlink"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "BAUER GROUP", email = "info@bauer-group.com" },
    { name = "Karl Bauer", email = "karl.bauer@bauer-group.com" },
]
requires-python = ">=3.13"
keywords = ["mcp", "shlink", "oauth", "fastmcp", "url-shortener", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
]
dependencies = [
    # Shared BAUER GROUP MCP framework — settings base, all five inbound auth
    # modes (entra-single/-multi, google, oidc, none), encrypted OAuth-state
    # storage, logging, rate limiting, routes, the outbound client + the
    # profile/CLI surface. Pulled from GitHub (internal projects do not use PyPI
    # for this package), pinned to a release tag for reproducibility. Extras:
    #   [openapi]         - the OpenAPI tool source (the 25 Shlink REST tools)
    #   [oauth-providers] - the Entra / Google inbound providers
    #   [redis]           - the RedisStore backend for the OAuth-state store
    #   [tasks]           - docket, for the export_short_urls long-running task
    # bg-mcpcore transitively provides fastmcp / pydantic / pydantic-settings /
    # httpx / structlog / rich / cryptography / typer / py-key-value-aio.
    "bg-mcpcore[openapi,oauth-providers,redis,tasks] @ git+https://github.com/bauer-group/LIB-BG-MCPCore.git@v1.6.0",

    # Directly imported by this server's own code (kept explicit; also provided
    # transitively by bg-mcpcore, so the version ranges stay compatible). The
    # server is now fully declarative — only the Settings subclass remains Python:
    "pydantic>=2.10.0,<3.0.0",      # Settings fields
    "pydantic-settings>=2.14.1,<3.0.0",  # NoDecode on the CSV-list fields

    # Optional error tracking — loaded lazily by bg-mcpcore, controlled by SENTRY_DSN.
    "sentry-sdk>=2.18.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0,<10.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
    "pytest-httpx>=0.35.0,<1.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "respx>=0.22.0,<1.0.0",
]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/bauer-group/IP-Shlink-MCPServer"
Source = "https://github.com/bauer-group/IP-Shlink-MCPServer"
Issues = "https://github.com/bauer-group/IP-Shlink-MCPServer/issues"

[project.scripts]
bg-shlink-mcp = "main:app"

# ── Hatch build configuration ──────────────────────────────────────────────
# bg-mcpcore is pulled via a direct git reference (GitHub, not PyPI); hatchling
# requires this opt-in to allow a PEP 508 direct URL in project.dependencies.
[tool.hatch.metadata]
allow-direct-references = true

# We ship a top-level package laid out under src/ - this points the wheel at it.
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# ── Tooling ────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic._internal.*",
    "ignore::DeprecationWarning:starlette.*",
]
markers = [
    "integration: marks tests that hit external services (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
# Global gate is conservative because CLI / server-lifespan / FastMCP wiring is
# integration-tested, not unit-tested. The cross-cutting infra (auth, storage,
# the OpenAPI + export tool sources, HTTP client + retry) is now tested once in
# bg-mcpcore's own suite; this fully declarative server's tests cover only its
# Settings subclass.
fail_under = 60
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
